pokerstars.peg
{
	//this.parsed = {};
	//this.parsed.__proto__ = new (require('events').EventEmitter)();

	//var parsed = this.parsed;

	var seatPresentationRegexes = [
			{ 
				pattern	: new RegExp("\\([$€]([0-9]+(?:\\.[0-9]+)?) in chips\\)"), 
				toRet		: function(result, seat, user){

					if(result){
						return {
							seat  : seat,
							user	: user.substring(0, result.index - 1).trimRight(),
							stack	: new Number(result[1])
						};
					}
					return null;
				}
			}
		]; // seatPresentationRegexes

	var usernameRegexes = [
			{ 
				pattern:new RegExp("collected [$€]([0-9]+(?:\\.[0-9]+)?) from pot"), 
				toRet:function(result, name){
					if(result){
						return {
							tag	: "collectsPot",
							user	: name.substring(0, result.index - 1).trimRight(),
							value	: new Number(result[1])
						};
					}
					return null;
				}
			},
			{ 
				pattern:new RegExp("collected [$€]([0-9]+(?:\\.[0-9]+)?) from side pot"), 
				toRet:function(result, name){
					if(result){
						return {
							tag	: "collectsSidePot",
							user	: name.substring(0, result.index - 1).trimRight(),
							value	: new Number(result[1])
						};
					}
					return null;
				}
			},
			{ 
				pattern:new RegExp("collected [$€]([0-9]+(?:\\.[0-9]+)?) from main pot"), 
				toRet:function(result, name){
					if(result){
						return {
							tag	: "collectsMainPot",
							user	: name.substring(0, result.index - 1).trimRight(),
							value	: new Number(result[1])
						};
					}
					return null;
				}
			},
			{
				pattern:new RegExp("joins the table at seat #([0-9]+)"),
				toRet:function(result, name){
							if(result){
								return {
									tag	: "joins",
									user	: name.substring(0, result.index - 1).trimRight(),
									seat	: new Number(result[1])
								};
							}
							return null;
						}
			}
		];
	
	var usernameTests = [
			{ str:"has timed out while disconnected", toRet:function( u ){ return { tag:"timeoutWhileDisc", user:u }}},
			{ str:"has timed out while being disconnected", toRet:function( u ){ return { tag:"timeoutWhileDisc", user:u }}},
			{ str:"leaves the table", toRet:function( u ){ return { tag:"leaves", user:u }}},
			{ str:"will be allowed to play after the button", toRet:function( u ){ return { tag:"allowedAfterButton", user:u }}},
			{ str:"was removed from the table for failing to post", toRet:function( u ){ return { tag:"removedAfterPostFail", user:u }}},
			{ str:"is disconnected", toRet:function(u){ return { tag:"disconnected", user:u }}},
			{ str:"has timed out", toRet:function(u){ return { tag:"timedOut", user:u }}},
			{ str:"is connected", toRet:function(u){ return { tag:"connected", user:u }}}
		];
}

program=
		wsNlStream hands:handRaw+
		{ return hands; }

handRaw=
		h:hand wsNlStream
		{ 
			//parsed.emit('hand', h); 
			return h;
		}

date=
		year:number "/" month:number "/" day:number " " hour:number ":" minute:number ":" second:number " ET"
		{ return { year:year, month:month, day:day, hour:hour, minute:minute, second:second}; }

handPresentation=
		"PokerStars Hand #" n:number ":" wsNlStream g:game wsNlStream "(" l:stakes ")" wsNlStream "-" wsNlStream d:date wsNlStream
		{ return { number:n, game:g, stakes:l, date:d}; }

tableType=
		"6-max"
	/	"10-max"
	/	"2-max"

tablePresentation=
		"Table '" table:tablename "' " type:tableType " Seat #" buttonseat:number " is the button" wsNlStream
		{ return { table:table, buttonseat:buttonseat, type:type}; }

seatPresentation=
		"Seat " seat:number ": " u:username wsNlStream // "(" stack:value " in chips)" wsNlStream
		{ 

			for(var k in seatPresentationRegexes){
				with(seatPresentationRegexes[k]){
					var r = toRet(u.match(pattern), seat, u);
					if(r !== null)
						return r;
				}
			}

			throw new Error("Invalid seat presentation! Matched '" + u + "' in (\"Seat \" seat:number \": \" u:username wsNlStream) (" + line + ", " + column + ")");
			//return { seat:seat, name:u, stack:stack};
		}

postSBlind=
		u:username ": posts small blind " v:value wsNlStream
		{ return { tag:"postSBlind", value:v, user:u }; }

postBBlind=
		u:username ": posts big blind " v:value wsNlStream
		{ return { tag:"postBBlind", value:v, user:u }; }

postSBBB=
		u:username ": posts small & big blinds " v:value wsNlStream
		{ return { tag:"postSBBB", value:v, user:u }; }

postAnte=
		u:username ": posts the ante " v:value wsNlStream
		{ return { tag:"ante", value:v, user:u }; }

card=
		rank:([2-9] / [ATJQK]) suit:[schd]
		{ return { rank:rank, suit:suit}; }

cardlist_tail=
		t:card wsNlStream
		{ return t; }

cardlist=
		h:card wsNlStream t:cardlist_tail*
		{ return [h].concat(t); }

boardlist_tail=
		t:boardlist wsNlStream
		{ return t; }

boardlist=
		h:board wsNlStream t:boardlist_tail*
		{ return [h].concat(t.reduce(function(i, t){ return (t.push(i), t); }, [])); }

board = 
		"[" h:card "]"
		{ return h; }
	/	"[" h:cardlist "]"
		{ return h; }


action_atom=
		"folds" showed:(wsNlStream board)?
		{ return { tag:"fold", showed:(showed ? showed[1] : null)}; }
	/	"checks"
		{ return { tag:"check"}; }
	/	"bets" wsNlStream c:value isAllin:" and is all-in"?
		{ return { tag:"bet", value:c, isAllin:(isAllin != false)}; }
	/	"calls" wsNlStream v:value isAllin:" and is all-in"?
		{ return { tag:"call", value:v, isAllin:(isAllin != false)}; }
	/	"raises" wsNlStream v:value " to " v2:value isAllin:" and is all-in"?
		{ return { tag:"raise", raised:v, to:v2, isAllin:(isAllin != false)}; }


action=
		name:username ":" wsNlStream a:action_atom wsNlStream
		{ return { tag:"action", user:name, action:a}; }
	/  "Uncalled bet (" v:value ") returned to " name:username wsNlStream
		{ return { tag: "uncalled", value:v, to:name}; }
	/	name:username ": doesn't show hand" wsNlStream
		{ return { tag:"not_shows", user:name }; }
	/	name:username ": mucks hand" wsNlStream
		{ return { tag:"mucks", user:name }; }
	/	name:username ": shows " hole:board " " rest:(!nl .)* wsNlStream
		{ return { tag:"shows", user:name, cards:hole, rest:rest.map(function(e){ return e[1];}).join('')}; }
	/	name:username ": shows " hole:board wsNlStream
		{ return { tag:"shows", user:name, cards:hole}; }
	/	name:username ": sits out" wsNlStream
		{ return { tag:"sits_out", user:name }; }
	/	name:username ": is sitting out" wsNlStream
		{ return { tag:"sitting_out", user:name }; }
	/	name:username ", " said:stringLiteral wsNlStream
		{
			// (1)
			var li = name.lastIndexOf("said");
			if(li > -1 && li === name.length - 4 /*length of "said"*/ ){
				return { tag:"said", user:name.substring(0, li - 1).trimRight(), said:said };
			}
			
			throw new Error("Invalid action! Matched '" + name + "' in (name:username \", \" said:stringLiteral wsNlStream) (" + line + ", " + column + ")");
		}
	/	name:username wsNlStream
		{
			// (1)

			var li = -1;
			for(var k in usernameTests){
				with(usernameTests[k]){
					li = name.lastIndexOf(str);
					if(li > -1 && li === name.length - str.length){
						return toRet( name.substring(0, li - 1).trimRight() );
					}
				}
			}

			for(var k in usernameRegexes){
				with(usernameRegexes[k]){
					var r = toRet(name.match(pattern), name);
					if(r !== null)
						return r;
				}
			}
			
			throw new Error("Invalid action! Matched '" + name + "' in (name:username wsNlStream) at (" + line + ", " + column + ")");
		}

/* 
	(1) = These ones are really wtf... the username can contain spaces, so
	string <username> leaves the table should be matched as a username, and then treated ... arg!!!
*/

streetHeader=
		"*** " name:streetName " ***"
		{ return name; }

streetName= "HOLE CARDS" / "FLOP" / "TURN" / "RIVER" / "SHOW DOWN"

street=
		name:streetHeader wsNlStream board:boardlist? actions:action*
		{ return { tag:"street", name:name, board:board, actions:actions }; }


summary_board=
		"Board " board:board wsNlStream
		{ return board; }

//	Total pot $27.33 Main pot $11.78. Side pot $14.32. | Rake $1.23 
// "Total pot " pot:value ("Main pot ")? " | Rake " rake:value wsNlStream
mainPot=
		" Main pot " main:value "."
		{ return main; }

sidePot=
		" Side pot " side:value "."
		{ return side; }

potInfoLeft=
		"Total pot " pot:value main:mainPot? side:sidePot?
		{
			return {
				pot:	pot,
				main:	main,
				side: side
			};
		}

potInfo=
		left:potInfoLeft " | Rake " rake:value wsNlStream
		{
			return {
				pot: 	left.pot,
				main:	left.main,
				side:	left.side,
				rake:	rake
			};
		}

		
summaryHeader = "*** SUMMARY ***"	
// Most will be ignored, for now at least
summary=
		summaryHeader wsNlStream
		pot:potInfo
		b:summary_board?
		("Seat " number ":" (!nl .)* wsNlStream)+
		{
			return {
				tag	: "summary",
				potInfo: pot,
				board	: (b === "" ? null : b )
			};
		}

preflopAction =
		postSBBB
	/ 	postSBlind
	/	postBBlind
	/	postAnte
	/	action

preflop=preflopAction*
	
hand=
		hand:handPresentation table:tablePresentation seats:seatPresentation+ prfl:preflop sts:street* summ:summary
		{
			return {
				tag		: "hand",
				info		: hand,
				table		: table,
				seats		: seats,
				streets	: (sts.push(prfl), sts),
				summary	: summ
			};
		}
	

game="Hold'em No Limit"

// Match everything until the end of the line. 
//	Then trim and take off the last ("). 
// (") inside the string are not escaped!!!
stringLiteral='"' c:(!nl .)*
		{ 
			var s = c.map(function(e){ return e[1];}).join('').trimRight(); 
			return s.substr(0, s.lastIndexOf('"')); 
		}

currency="USD" / "EUR"
currencySymbol= "$" / "€" // "\u20AC"

stakes=
		s:value "/" b:value " - " cap:value " Cap -  " c:currency
		{ return { small:s, big:b, cap:cap, currency:c}; }
	/	s:value "/" b:value " " c:currency
		{ return { small:s, big:b, currency:c}; }

CCusername=
		cs:usernamechar+
		{ return cs.join('').trimRight(); }


username=
		!(streetHeader / summaryHeader) user:CCusername
		{ return user; }

// The amount of allowed chars is too damn high!
// FIXME ':' and ',' are allowed!
usernamechar=[a-zA-Z0-9!_€$%@#\.\-\=\*\+\|\/><&äëïöüãẽĩõũàèìòùáéíóúâêîôûÄËÏÖÜÃẼĨÕŨÀÈÌÒÙÁÉÍÓÚÂÊÎÔÛçÇåæ¤\?\(\)\^`´ ] / '"' / "'"

tablename= cs:tablenamechar+
		{ return cs.join('').trimRight(); }

tablenamechar=[a-zA-Z0-9\- ]

digits=[0-9]
number=
		d:digits+
		{ return new Number(d.join('')); }

value=
		s:currencySymbol? d:digits+ "." d2:digits+
		{ return new Number(d.join('') + '.' + d2.join('')); }
	/	s:currencySymbol? n:number
		{ return n; }

wsNlStream	= wsNl*
wsNl			= ws / nl
ws				= [ /w/t]
nl				= "\n" / "\r" / "\r\n"
