pokerstars.js
exports.parser = (function(){
  /*
   * Generated by PEG.js 0.7.0.
   *
   * http://pegjs.majda.cz/
   */
  
  function quote(s) {
    /*
     * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
     * string literal except for the closing quote character, backslash,
     * carriage return, line separator, paragraph separator, and line feed.
     * Any character may appear in the form of an escape sequence.
     *
     * For portability, we also escape escape all control and non-ASCII
     * characters. Note that "\0" and "\v" escape sequences are not used
     * because JSHint does not like the first and IE the second.
     */
     return '"' + s
      .replace(/\\/g, '\\\\')  // backslash
      .replace(/"/g, '\\"')    // closing quote character
      .replace(/\x08/g, '\\b') // backspace
      .replace(/\t/g, '\\t')   // horizontal tab
      .replace(/\n/g, '\\n')   // line feed
      .replace(/\f/g, '\\f')   // form feed
      .replace(/\r/g, '\\r')   // carriage return
      .replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape)
      + '"';
  }
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "program": parse_program,
        "handRaw": parse_handRaw,
        "date": parse_date,
        "handPresentation": parse_handPresentation,
        "tableType": parse_tableType,
        "tablePresentation": parse_tablePresentation,
        "seatPresentation": parse_seatPresentation,
        "postSBlind": parse_postSBlind,
        "postBBlind": parse_postBBlind,
        "postSBBB": parse_postSBBB,
        "postAnte": parse_postAnte,
        "card": parse_card,
        "cardlist_tail": parse_cardlist_tail,
        "cardlist": parse_cardlist,
        "boardlist_tail": parse_boardlist_tail,
        "boardlist": parse_boardlist,
        "board": parse_board,
        "action_atom": parse_action_atom,
        "action": parse_action,
        "streetHeader": parse_streetHeader,
        "streetName": parse_streetName,
        "street": parse_street,
        "summary_board": parse_summary_board,
        "mainPot": parse_mainPot,
        "sidePot": parse_sidePot,
        "potInfoLeft": parse_potInfoLeft,
        "potInfo": parse_potInfo,
        "summaryHeader": parse_summaryHeader,
        "summary": parse_summary,
        "preflopAction": parse_preflopAction,
        "preflop": parse_preflop,
        "hand": parse_hand,
        "game": parse_game,
        "stringLiteral": parse_stringLiteral,
        "currency": parse_currency,
        "currencySymbol": parse_currencySymbol,
        "stakes": parse_stakes,
        "CCusername": parse_CCusername,
        "username": parse_username,
        "usernamechar": parse_usernamechar,
        "digits": parse_digits,
        "number": parse_number,
        "value": parse_value,
        "wsNlStream": parse_wsNlStream,
        "wsNl": parse_wsNl,
        "ws": parse_ws,
        "nl": parse_nl
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "program";
      }
      
      var pos = { offset: 0, line: 1, column: 1, seenCR: false };
      var reportFailures = 0;
      var rightmostFailuresPos = { offset: 0, line: 1, column: 1, seenCR: false };
      var rightmostFailuresExpected = [];
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        var escapeChar;
        var length;
        
        if (charCode <= 0xFF) {
          escapeChar = 'x';
          length = 2;
        } else {
          escapeChar = 'u';
          length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function clone(object) {
        var result = {};
        for (var key in object) {
          result[key] = object[key];
        }
        return result;
      }
      
      function advance(pos, n) {
        var endOffset = pos.offset + n;
        
        for (var offset = pos.offset; offset < endOffset; offset++) {
          var ch = input.charAt(offset);
          if (ch === "\n") {
            if (!pos.seenCR) { pos.line++; }
            pos.column = 1;
            pos.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            pos.line++;
            pos.column = 1;
            pos.seenCR = true;
          } else {
            pos.column++;
            pos.seenCR = false;
          }
        }
        
        pos.offset += n;
      }
      
      function matchFailed(failure) {
        if (pos.offset < rightmostFailuresPos.offset) {
          return;
        }
        
        if (pos.offset > rightmostFailuresPos.offset) {
          rightmostFailuresPos = clone(pos);
          rightmostFailuresExpected = [];
        }
        
        rightmostFailuresExpected.push(failure);
      }
      
      function parse_program() {
        var result0, result1, result2;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = parse_wsNlStream();
        if (result0 !== null) {
          result2 = parse_handRaw();
          if (result2 !== null) {
            result1 = [];
            while (result2 !== null) {
              result1.push(result2);
              result2 = parse_handRaw();
            }
          } else {
            result1 = null;
          }
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, hands) { return hands; })(pos0.offset, pos0.line, pos0.column, result0[1]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_handRaw() {
        var result0, result1;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = parse_hand();
        if (result0 !== null) {
          result1 = parse_wsNlStream();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, h) { return h;})(pos0.offset, pos0.line, pos0.column, result0[0]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_date() {
        var result0, result1, result2, result3, result4, result5, result6, result7, result8, result9, result10, result11;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = parse_number();
        if (result0 !== null) {
          if (input.charCodeAt(pos.offset) === 47) {
            result1 = "/";
            advance(pos, 1);
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"/\"");
            }
          }
          if (result1 !== null) {
            result2 = parse_number();
            if (result2 !== null) {
              if (input.charCodeAt(pos.offset) === 47) {
                result3 = "/";
                advance(pos, 1);
              } else {
                result3 = null;
                if (reportFailures === 0) {
                  matchFailed("\"/\"");
                }
              }
              if (result3 !== null) {
                result4 = parse_number();
                if (result4 !== null) {
                  if (input.charCodeAt(pos.offset) === 32) {
                    result5 = " ";
                    advance(pos, 1);
                  } else {
                    result5 = null;
                    if (reportFailures === 0) {
                      matchFailed("\" \"");
                    }
                  }
                  if (result5 !== null) {
                    result6 = parse_number();
                    if (result6 !== null) {
                      if (input.charCodeAt(pos.offset) === 58) {
                        result7 = ":";
                        advance(pos, 1);
                      } else {
                        result7 = null;
                        if (reportFailures === 0) {
                          matchFailed("\":\"");
                        }
                      }
                      if (result7 !== null) {
                        result8 = parse_number();
                        if (result8 !== null) {
                          if (input.charCodeAt(pos.offset) === 58) {
                            result9 = ":";
                            advance(pos, 1);
                          } else {
                            result9 = null;
                            if (reportFailures === 0) {
                              matchFailed("\":\"");
                            }
                          }
                          if (result9 !== null) {
                            result10 = parse_number();
                            if (result10 !== null) {
                              if (input.substr(pos.offset, 3) === " ET") {
                                result11 = " ET";
                                advance(pos, 3);
                              } else {
                                result11 = null;
                                if (reportFailures === 0) {
                                  matchFailed("\" ET\"");
                                }
                              }
                              if (result11 !== null) {
                                result0 = [result0, result1, result2, result3, result4, result5, result6, result7, result8, result9, result10, result11];
                              } else {
                                result0 = null;
                                pos = clone(pos1);
                              }
                            } else {
                              result0 = null;
                              pos = clone(pos1);
                            }
                          } else {
                            result0 = null;
                            pos = clone(pos1);
                          }
                        } else {
                          result0 = null;
                          pos = clone(pos1);
                        }
                      } else {
                        result0 = null;
                        pos = clone(pos1);
                      }
                    } else {
                      result0 = null;
                      pos = clone(pos1);
                    }
                  } else {
                    result0 = null;
                    pos = clone(pos1);
                  }
                } else {
                  result0 = null;
                  pos = clone(pos1);
                }
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, year, month, day, hour, minute, second) { return { year:year, month:month, day:day, hour:hour, minute:minute, second:second}; })(pos0.offset, pos0.line, pos0.column, result0[0], result0[2], result0[4], result0[6], result0[8], result0[10]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_handPresentation() {
        var result0, result1, result2, result3, result4, result5, result6, result7, result8, result9, result10, result11, result12, result13;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        if (input.substr(pos.offset, 17) === "PokerStars Hand #") {
          result0 = "PokerStars Hand #";
          advance(pos, 17);
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"PokerStars Hand #\"");
          }
        }
        if (result0 !== null) {
          result1 = parse_number();
          if (result1 !== null) {
            if (input.charCodeAt(pos.offset) === 58) {
              result2 = ":";
              advance(pos, 1);
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("\":\"");
              }
            }
            if (result2 !== null) {
              result3 = parse_wsNlStream();
              if (result3 !== null) {
                result4 = parse_game();
                if (result4 !== null) {
                  result5 = parse_wsNlStream();
                  if (result5 !== null) {
                    if (input.charCodeAt(pos.offset) === 40) {
                      result6 = "(";
                      advance(pos, 1);
                    } else {
                      result6 = null;
                      if (reportFailures === 0) {
                        matchFailed("\"(\"");
                      }
                    }
                    if (result6 !== null) {
                      result7 = parse_stakes();
                      if (result7 !== null) {
                        if (input.charCodeAt(pos.offset) === 41) {
                          result8 = ")";
                          advance(pos, 1);
                        } else {
                          result8 = null;
                          if (reportFailures === 0) {
                            matchFailed("\")\"");
                          }
                        }
                        if (result8 !== null) {
                          result9 = parse_wsNlStream();
                          if (result9 !== null) {
                            if (input.charCodeAt(pos.offset) === 45) {
                              result10 = "-";
                              advance(pos, 1);
                            } else {
                              result10 = null;
                              if (reportFailures === 0) {
                                matchFailed("\"-\"");
                              }
                            }
                            if (result10 !== null) {
                              result11 = parse_wsNlStream();
                              if (result11 !== null) {
                                result12 = parse_date();
                                if (result12 !== null) {
                                  result13 = parse_wsNlStream();
                                  if (result13 !== null) {
                                    result0 = [result0, result1, result2, result3, result4, result5, result6, result7, result8, result9, result10, result11, result12, result13];
                                  } else {
                                    result0 = null;
                                    pos = clone(pos1);
                                  }
                                } else {
                                  result0 = null;
                                  pos = clone(pos1);
                                }
                              } else {
                                result0 = null;
                                pos = clone(pos1);
                              }
                            } else {
                              result0 = null;
                              pos = clone(pos1);
                            }
                          } else {
                            result0 = null;
                            pos = clone(pos1);
                          }
                        } else {
                          result0 = null;
                          pos = clone(pos1);
                        }
                      } else {
                        result0 = null;
                        pos = clone(pos1);
                      }
                    } else {
                      result0 = null;
                      pos = clone(pos1);
                    }
                  } else {
                    result0 = null;
                    pos = clone(pos1);
                  }
                } else {
                  result0 = null;
                  pos = clone(pos1);
                }
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, n, g, l, d) { return { number:n, game:g, stakes:l, date:d}; })(pos0.offset, pos0.line, pos0.column, result0[1], result0[4], result0[7], result0[12]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_tableType() {
        var result0;
        
        if (input.substr(pos.offset, 5) === "6-max") {
          result0 = "6-max";
          advance(pos, 5);
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"6-max\"");
          }
        }
        if (result0 === null) {
          if (input.substr(pos.offset, 6) === "10-max") {
            result0 = "10-max";
            advance(pos, 6);
          } else {
            result0 = null;
            if (reportFailures === 0) {
              matchFailed("\"10-max\"");
            }
          }
          if (result0 === null) {
            if (input.substr(pos.offset, 5) === "2-max") {
              result0 = "2-max";
              advance(pos, 5);
            } else {
              result0 = null;
              if (reportFailures === 0) {
                matchFailed("\"2-max\"");
              }
            }
          }
        }
        return result0;
      }
      
      function parse_tablePresentation() {
        var result0, result1, result2, result3, result4, result5, result6, result7;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        if (input.substr(pos.offset, 7) === "Table '") {
          result0 = "Table '";
          advance(pos, 7);
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"Table '\"");
          }
        }
        if (result0 !== null) {
          result1 = parse_username();
          if (result1 !== null) {
            if (input.substr(pos.offset, 2) === "' ") {
              result2 = "' ";
              advance(pos, 2);
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("\"' \"");
              }
            }
            if (result2 !== null) {
              result3 = parse_tableType();
              if (result3 !== null) {
                if (input.substr(pos.offset, 7) === " Seat #") {
                  result4 = " Seat #";
                  advance(pos, 7);
                } else {
                  result4 = null;
                  if (reportFailures === 0) {
                    matchFailed("\" Seat #\"");
                  }
                }
                if (result4 !== null) {
                  result5 = parse_number();
                  if (result5 !== null) {
                    if (input.substr(pos.offset, 14) === " is the button") {
                      result6 = " is the button";
                      advance(pos, 14);
                    } else {
                      result6 = null;
                      if (reportFailures === 0) {
                        matchFailed("\" is the button\"");
                      }
                    }
                    if (result6 !== null) {
                      result7 = parse_wsNlStream();
                      if (result7 !== null) {
                        result0 = [result0, result1, result2, result3, result4, result5, result6, result7];
                      } else {
                        result0 = null;
                        pos = clone(pos1);
                      }
                    } else {
                      result0 = null;
                      pos = clone(pos1);
                    }
                  } else {
                    result0 = null;
                    pos = clone(pos1);
                  }
                } else {
                  result0 = null;
                  pos = clone(pos1);
                }
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, table, type, buttonseat) { return { table:table, buttonseat:buttonseat, type:type}; })(pos0.offset, pos0.line, pos0.column, result0[1], result0[3], result0[5]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_seatPresentation() {
        var result0, result1, result2, result3, result4, result5, result6, result7;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        if (input.substr(pos.offset, 5) === "Seat ") {
          result0 = "Seat ";
          advance(pos, 5);
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"Seat \"");
          }
        }
        if (result0 !== null) {
          result1 = parse_number();
          if (result1 !== null) {
            if (input.substr(pos.offset, 2) === ": ") {
              result2 = ": ";
              advance(pos, 2);
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("\": \"");
              }
            }
            if (result2 !== null) {
              result3 = parse_username();
              if (result3 !== null) {
                if (input.charCodeAt(pos.offset) === 40) {
                  result4 = "(";
                  advance(pos, 1);
                } else {
                  result4 = null;
                  if (reportFailures === 0) {
                    matchFailed("\"(\"");
                  }
                }
                if (result4 !== null) {
                  result5 = parse_value();
                  if (result5 !== null) {
                    if (input.substr(pos.offset, 10) === " in chips)") {
                      result6 = " in chips)";
                      advance(pos, 10);
                    } else {
                      result6 = null;
                      if (reportFailures === 0) {
                        matchFailed("\" in chips)\"");
                      }
                    }
                    if (result6 !== null) {
                      result7 = parse_wsNlStream();
                      if (result7 !== null) {
                        result0 = [result0, result1, result2, result3, result4, result5, result6, result7];
                      } else {
                        result0 = null;
                        pos = clone(pos1);
                      }
                    } else {
                      result0 = null;
                      pos = clone(pos1);
                    }
                  } else {
                    result0 = null;
                    pos = clone(pos1);
                  }
                } else {
                  result0 = null;
                  pos = clone(pos1);
                }
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, seat, u, stack) { return { seat:seat, name:u, stack:stack}; })(pos0.offset, pos0.line, pos0.column, result0[1], result0[3], result0[5]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_postSBlind() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = parse_username();
        if (result0 !== null) {
          if (input.substr(pos.offset, 20) === ": posts small blind ") {
            result1 = ": posts small blind ";
            advance(pos, 20);
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\": posts small blind \"");
            }
          }
          if (result1 !== null) {
            result2 = parse_value();
            if (result2 !== null) {
              result3 = parse_wsNlStream();
              if (result3 !== null) {
                result0 = [result0, result1, result2, result3];
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, u, v) { return { tag:"postSBlind", value:v, user:u }; })(pos0.offset, pos0.line, pos0.column, result0[0], result0[2]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_postBBlind() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = parse_username();
        if (result0 !== null) {
          if (input.substr(pos.offset, 18) === ": posts big blind ") {
            result1 = ": posts big blind ";
            advance(pos, 18);
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\": posts big blind \"");
            }
          }
          if (result1 !== null) {
            result2 = parse_value();
            if (result2 !== null) {
              result3 = parse_wsNlStream();
              if (result3 !== null) {
                result0 = [result0, result1, result2, result3];
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, u, v) { return { tag:"postBBlind", value:v, user:u }; })(pos0.offset, pos0.line, pos0.column, result0[0], result0[2]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_postSBBB() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = parse_username();
        if (result0 !== null) {
          if (input.substr(pos.offset, 27) === ": posts small & big blinds ") {
            result1 = ": posts small & big blinds ";
            advance(pos, 27);
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\": posts small & big blinds \"");
            }
          }
          if (result1 !== null) {
            result2 = parse_value();
            if (result2 !== null) {
              result3 = parse_wsNlStream();
              if (result3 !== null) {
                result0 = [result0, result1, result2, result3];
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
